# axum_file_management_service

./: .env  .env.docker  .env.kubernates  .gitignore  Cargo.toml  Dockerfile.alpine  Dockerfile.binary.alpine  Dockerfile.binary.debian  Dockerfile.debian  Jenkinsfile  Makefile  README.md  compose.yaml  k8s.yaml  log4rs.yml
bussiness-process/: m-file.mmd
container/docker/: Dockerfile.debian  compose.yaml
container/kubernates/: deployment.yaml  service.yaml  storage.yaml
deployment/: Dockerfile
http/: .env.dev  .env.local  health.http  m_file.http  m_file_file.http
src/: diesel_schema.rs  lib.rs  main.rs  state.rs
src/config/: database.rs  environment.rs  mod.rs
src/config/logger/: log4rs.rs  main.rs  mod.rs  slog.rs  tracing.rs
src/dto/: database.rs  environment.rs  mod.rs
src/dto/enumerator/: database_type.rs  file_type.rs  filter_data_type.rs  filter_match_mode.rs  filter_mode.rs  mod.rs
src/dto/request/: filter_request.rs  mod.rs  pagination_request.rs  search_request.rs  sort_request.rs
src/dto/response/: app_error.rs  app_response.rs  mod.rs  pagination_response.rs
src/middleware/: logger_middleware.rs  mod.rs
src/module/: mod.rs
src/module/health/: controller.rs  router.rs
src/module/m_file/: controller.rs  mod.rs  repository.rs  router.rs  schema.rs
src/module/m_file/file/: controller.rs  router.rs
src/util/: mod.rs  serializer.rs  string_manipulation.rs
