[package]
name = "axum_file_management_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "compression-full", "decompression-full"] }

validator = { version = "0.20.0", features = ["derive"] }

chrono = { version = "0.4.42", features = ["serde"] }
serde={version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"

rdkafka = "0.38.0"

lazy_static = "1.4"

# log
log4rs = "1.4.0"
log="0.4.28"
# slog
slog = "2.8.0"
slog-async = "2.7.0"
slog-term = "2.9.2"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-log = "0.2"
tracing-appender = "0.2"

# environment
dotenv = "0.15.0"
envy = "0.4.2"

# database
bb8 = "0.9.0"
# diesel-async = { version = "0.6.1", features = ["postgres", "bb8"] }
diesel = {version = "2.3.2", features = ["r2d2", "mysql", "chrono", "postgres", "sqlite", "returning_clauses_for_sqlite_3_35"]}
redis = { version = "0.32.7", features = ["tokio-comp"] }
regex = "1.11.3"
tokio-util = "0.7.16"


uuid = { version = "1", features = ["v4"] }